--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Alex Portfolio
+icon: /assets/img/icon.svg
 email: alexgamedev2000@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Hi, Im Alex and I'm a junior programmer specified in games.
@@ -27,10 +28,13 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: alexgamedev2000
 github_username:  Alex-GameDev
 
-# Build settings
-theme: minima
 plugins:
   - jekyll-feed
+
+sass:
+  sass_dir: _sass
+  style: compressed
+  sourcemap: never
 
 # Exclude from processing.
 # The following items will not be processed, by default.
