--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,9 @@ description: >- # this means to ignore newlines until "baseurl:"
   Hi, Im Alex and I'm a junior programmer specified in games.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: alexgamedev2000
-github_username:  Alex-GameDev
+twitter: https://twitter.com/alex_game_dev
+linkedin:  https://www.linkedin.com/in/alejandro-orejudo/
+github: https://github.com/Alex-GameDev
 
 default_thumbnail: "/assets/img/tmb-jekyll-portfolio.jpg"
 
